--- a/UI/style-reservas.css
+++ b/UI/style-reservas.css
@@ -1,5 +1,6 @@
 body {
     font-family: "Montserrat", "sans-serif";
+    background: #F6F8B4;
 }
 
 .header-principal {
@@ -89,8 +90,62 @@ nav a:hover {
     padding: 10px 15px;
 }
 
-main {
-    background: #F6F8B4;
+.reservas {
+    margin: 0 50px;
+
+}
+
+.reservas h1 {
+    font-size: 25px;
+    font-weight: bolder;
+    margin: 15px 80px;
+}
+
+
+.reservas ul {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+    border: none;
+    border-radius: 15px;
+    width: 40%;
+    margin: 30px 40px;
+    padding: 30px 30px;
+    background: rgb(223, 203, 118);
+}
+
+.reservas li {
+    font-weight: bold;
+}
+
+
+
+.boton-reserva {
+    border: none;
+    border-radius: 10px;
+    padding: 10px 15px;
+    background: red;
+    color: white;
+    margin: 15px 15px 15px 15px;
+    font-weight: bold;
+}
+
+.boton-reserva:active {
+    transform: scale(1.2);
+
+}
+
+.crear-reserva {
+    font-size: 35px;
+    font-weight: bolder;
+
+}
+
+main .crear-reserva {
+    display: flex;
+    justify-content: center;
+
 }
 
 .productos {
@@ -105,8 +160,8 @@ main {
     display: inline-block;
     text-align: center;
     width: 30%;
-
-    border: 1px black solid;
+    box-shadow: 7px -4px 18px 1px black;
+    border: none;
     border-radius: 15px;
     height: 550px;
     width: 300px;
@@ -156,7 +211,7 @@ main {
     border: none;
     border-radius: 10px;
     padding: 10px 25px;
-    background: #d46f1b;
+    background: #2e2d2c;
     color: white;
     margin-left: 20px;
     font-weight: bold;
