--- a/src/css/home.css
+++ b/src/css/home.css
@@ -126,6 +126,12 @@ p:first-line {
 
 }
 
+.cart-number {
+    background-color: white;
+    border-radius: 50%;
+    text-align: center;
+}
+
 @media screen and (max-width:480px) {
 
     h1 {
