products are now get from the backend

--- a/src/css/style-cart.css
+++ b/src/css/style-cart.css
@@ -179,3 +179,13 @@ main .titulo-carrito {
     transform: scale(1.2);
     background: rgb(84, 81, 81);
 }
+
+.boton-pago-disabled {
+    border: none;
+    border-radius: 10px;
+    padding: 10px 100px;
+    background: rgba(86, 83, 83, 0.368);
+    color: white;
+    margin: 30px 0 0 100px;
+    font-weight: bold;
+}
