--- a/src/css/components/alert.css
+++ b/src/css/components/alert.css
@@ -1,16 +1,17 @@
 .alert {
     position: fixed;
+    top: 0;
+    left: 0;
     transform: translate(calc(50vw - 50%), 20vh);
     width: 40vw;
     height: 40px;
-    border-radius: 4px;
+    border-radius: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
     color: white;
     font-size: x-large;
     font-weight: bolder;
-    border-color: brown;
-    border-style: solid;
-    border-width: 5px;
+    border: none;
+    padding: 7px 0;
 }
