--- a/src/css/components/header.css
+++ b/src/css/components/header.css
@@ -72,4 +72,31 @@ nav a:hover {
     border: none;
     border-radius: 10px;
     padding: 10px 15px;
+
+
+}
+
+.logo-carrito {
+    background: #ffffff;
+    ;
+    border-radius: 20px;
+    padding: 5px 5px;
+    position: relative;
+
+
+}
+
+.cart-number {
+    background-color: rgb(255, 0, 0);
+    border-radius: 10px;
+    text-align: center;
+    color: white;
+    font-weight: bold;
+    position: absolute;
+    padding: 0 6px;
+    font-size: 18px;
+    right: 0;
+    bottom: 0;
+
+
 }
