--- a/src/css/style-date.css
+++ b/src/css/style-date.css
@@ -73,7 +73,17 @@
     border: none;
     border-radius: 10px;
     padding: 10px 35px;
+    background: #2e2d2c;
+    color: white;
+    margin: 25px 0 10px 150px;
+    font-weight: bold;
+}
+
+.reserve-button-disabled {
     background: #8c8986;
+    border: none;
+    border-radius: 10px;
+    padding: 10px 35px;
     color: white;
     margin: 25px 0 10px 150px;
     font-weight: bold;
